fixed some classes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <section class="hero is-dark is-fullheight">
     <div class="hero-body">
-        <div class="column">
+        <div class="container">
             <h1 class="title">
                 Comp426
             </h1>
